--- a/geometry_page.html
+++ b/geometry_page.html
@@ -362,7 +362,7 @@
 
 
 // var map, geojson;
-//         // const API_URL = "https://iwmsgis.pmc.gov.in/geopulse/autodcr/";
+//         // const API_URL = "https://iwmsgis.pmc.gov.in//geopulse/autodcr/";
 //         // const API_URL = "http://localhost/Autodcr";
 
 //         // Add Basemap
@@ -400,7 +400,7 @@
 //         var baseLayers = {};
 
 //         var IWMS_line = L.tileLayer
-//             .wms("https://iwmsgis.pmc.gov.in/geoserver/pmc/wms", {
+//             .wms("https://iwmsgis.pmc.gov.in//geoserver/pmc/wms", {
 //                 layers: "IWMS_line",
 //                 format: "image/png",
 //                 transparent: true,
@@ -410,7 +410,7 @@
 //                 opacity: 1,
 //             });
 //         var IWMS_polygon = L.tileLayer
-//             .wms("https://iwmsgis.pmc.gov.in/geoserver/pmc/wms", {
+//             .wms("https://iwmsgis.pmc.gov.in//geoserver/pmc/wms", {
 //                 layers: "IWMS_polygon",
 //                 format: "image/png",
 //                 transparent: true,
@@ -420,7 +420,7 @@
 //                 opacity: 1,
 //             });
 //         var IWMS_point = L.tileLayer
-//             .wms("https://iwmsgis.pmc.gov.in/geoserver/pmc/wms", {
+//             .wms("https://iwmsgis.pmc.gov.in//geoserver/pmc/wms", {
 //                 layers: "IWMS_point",
 //                 format: "image/png",
 //                 transparent: true,
@@ -481,7 +481,7 @@
 //                 layers = ["pmc:IWMS_line"];
 //                 layers.forEach(function (layerName) {
 //                     var urlm =
-//                         "https://iwmsgis.pmc.gov.in/geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
+//                         "https://iwmsgis.pmc.gov.in//geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
 //                         layerName +
 //                         "&CQL_FILTER=" +
 //                         filter +
@@ -528,7 +528,7 @@
 //             layers = ["pmc:IWMS_line", "pmc:IWMS_polygon", "pmc:IWMS_point"];
 //             layers.forEach(function (layerName) {
 //                 var urlm =
-//                     "https://iwmsgis.pmc.gov.in/geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
+//                     "https://iwmsgis.pmc.gov.in//geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
 //                     layerName +
 //                     "&CQL_FILTER=" +
 //                     filter +
