--- a/index.html
+++ b/index.html
@@ -185,40 +185,45 @@
   <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
 <style>
 
-
-.modal {
+   /* The Modal (background) */
+   .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  margin: auto;
   width: 100%; /* Full width */
-  height: 100% ;/* Full height */
+  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  z-index: 10000;
-  
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
+  text-align: center;
   margin: 15% auto; /* 15% from the top and centered */
+  height: 30vh;
   padding: 20px;
-  /* border: 1px solid #888; */
-  width: 20%; /* Could be more or less, depending on screen size */
-  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
 }
+
 /* The Close Button */
 .close {
+  display: none;
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
-
+#message{
+  margin: auto;
+}
 .close:hover,
 .close:focus {
+  display: none;
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -234,6 +239,8 @@
   animation: spin 1s linear infinite;
   margin: 20px auto;
 }
+
+
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
