--- a/drainage.html
+++ b/drainage.html
@@ -9,36 +9,72 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style>
-    /* #map {
-      top: 0px;
-      left: 0px;
-      height: 99vh;
-      width: 100%;
-      z-index: 1;
+    .custom-button {
+  width: auto;
+  padding: px 5px;
+  background-color: #fff;
+  /* color: darkblue; */
+  font-weight: bold;
+  font-size: 10px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px !important;
+  cursor: pointer;
+  /* position: absolute; */
+  top: 482px !important;
+  left: 740px !important;
+  height: 37px !important;
+  width: 37px !important;
+  transition: background-color  0.1s;
     }
+  .leaflet-draw-draw-polyline {
+  top: 435px;
+  position: absolute;
+  left: 650px;
+  border: 2px solid #2b13bb !important;
+  border-bottom: 2px solid darkblue;
+  height: 37px !important;
+  width: 37px !important;
+  border-radius: 5px 5px 5px 5px !important;
+}
+#save-button {
+  /* border: 2px solid rgb(187, 187, 187); */
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 7px;
+  display: none;
+  position: absolute;
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  top: 548px;
+  height: 37px;
+  width: 37px;
+  left: 565px;
+  font-size: 15px;
+  border-bottom: 2px solid #2b13bb;
+}
+.delete-button {
+  border: 2px solid #2b13bb;
+  padding: 6px 7.3px;
+  font-size: 14px;
+  border-radius: 5px 5px 5px 5px;
+  
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  left: 518px;
+  position: absolute;
+  top: 487px;
+  height: 37px;
+  width: 37px;
 
-   
+  display: none;
+  border-top: 2px solid #2b13bb;
+}
 
-    .leaflet-container .leaflet-control-attribution {
-
-      display: none;
-    }
-
-
-
-    .leaflet-control-zoom {
-      position: absolute;
-      left: 96vw;
-      top: 85vh;
-      border: 2px solid darkblue;
-    }
-
-    .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
- 
-    background-clip: padding-box;
-    border: 2px solid darkblue;
     
-} */
+
   </style>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
