--- a/drainage.html
+++ b/drainage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style>
-    .custom-button {
+  .custom-button {
   width: auto;
   padding: px 5px;
   background-color: #fff;
@@ -63,14 +63,72 @@
   background-color: white;
   color: black;
   cursor: pointer;
-  left: 518px;
+  left: 476px;
   position: absolute;
-  top: 487px;
+  top: 492px !important;
   height: 37px;
   width: 37px;
 
   display: none;
   border-top: 2px solid #2b13bb;
+}
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 505px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  /* display: none; */
+  left: 520px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+#saveDataButton {
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  position: fixed;
+  color: black;
+  padding: 0px 5px;
+  display: none;
+  top: 600px;
+  font-size: 19px;
+  height: 37px;
+  width: 37px;
+  left: 880px;
+}
+
+#deleteFeatureButton {
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 3px 7px;
+  display: none;
+  position: fixed;
+  top: 600px;
+  font-size: 15px;
+  height: 37px;
+  width: 37px;
+  left: 925px;
+}
+
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px;
+  width: 37px;
+  display: none;
+  position: fixed;
+  top: 600px;
+  left: 838px;
+  padding: 5px;
+  background: white;
+  border-bottom: 2px solid #2b13bb;
 }
 
     
