--- a/electric-work.html
+++ b/electric-work.html
@@ -11,36 +11,19 @@
 
 
   <style>
-    #map {
-      top: 0px;
-      left: 0px;
-      height: 99vh;
-      width: 100%;
-      z-index: 1;
-    }
+   .leaflet-draw-draw-polygon{
+  
+  position: absolute;
+    /* top: -170px; */
+   top: -246px;
 
-   
-
-    .leaflet-container .leaflet-control-attribution {
-
-      display: none;
-    }
-
-
-
-    .leaflet-control-zoom {
-      position: absolute;
-      left: 96vw;
-      top: 85vh;
-      border: 2px solid darkblue;
-    }
-
-    .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
- 
-    background-clip: padding-box;
-    border: 2px solid darkblue;
+    left: 56px;
+    border:2px solid darkblue;
     
-}
+ }
+
+
+
   </style>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
