pmc-update $ git commit  -m pmc-update

--- a/road.html
+++ b/road.html
@@ -7,6 +7,55 @@
   <title>PMC</title>
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    #saveDataButton {
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  position: fixed;
+  color: black;
+  padding: 0px 5px;
+  display: none;
+  top: 683px;
+  font-size: 19px;
+  height: 37px;
+  width: 37px;
+  left: 880px;
+}
+#deleteFeatureButton {
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 3px 7px;
+  display: none;
+  position: fixed;
+  top: 683px;
+  font-size: 15px;
+  height: 37px;
+  width: 37px;
+  left: 925px;
+}
+
+
+
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px;
+  width: 37px;
+  display: none;
+  position: fixed;
+  top: 683px;
+  left: 838px;
+  padding: 5px;
+  background: white;
+  border-bottom: 2px solid #2b13bb;
+}
+  </style>
   
 
 
