--- a/drainage.html
+++ b/drainage.html
@@ -444,13 +444,41 @@ function toggleSelectLayerButton(show) {
                   });
 
                   setTimeout(() => {
-                    window.location.href = `geometry_page.html?id=`+response.lastInsertIdIWMS+`&department=Road`+`&lastInsertedId=`+lastInsertedId;
+                  //  window.location.href = `geometry_page.html?id=`+response.lastInsertIdIWMS+`&department=Road`+`&lastInsertedId=`+lastInsertedId;
                   }, 2100);
                 },
                 error: function (xhr, status, error) {
                   console.error("Save failed:", error);
                 },
               });
+              area = turf.length(selectCoordinatesData[0].geometry, { units: 'meters' }); 
+              console.log(selectCoordinatesData)
+                var formData = new FormData();
+                formData.append('proj_id', worksAaApprovalId);
+                formData.append('latitude', selectCoordinatesData[0].geometry.coordinates[0][1]);
+                formData.append('longitude', selectCoordinatesData[0].geometry.coordinates[0][0]);
+                formData.append('polygon_area', 0);
+                formData.append('polygon_centroid', 0);
+                formData.append('geometry', JSON.stringify(selectCoordinatesData[0].geometry.coordinates?.map(coordinates => coordinates.slice().reverse())));
+                formData.append('road_no', struct_no);
+                formData.append('user_id', user_id);
+                formData.append('length', area);
+                formData.append('width', width);
+              
+                          $.ajax({
+                    type: "POST",
+                    url: "https://iwms.punecorporation.org/api/gis-data",
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (response) {
+                        console.log(response);
+                       window.location.href = response.data.redirect_Url;
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Save failed:", error);
+                    },
+                });
             });
 
           
