--- a/water-suppy.html
+++ b/water-suppy.html
@@ -18,6 +18,163 @@
       width: 100%;
       z-index: 1;
     }
+  .draw_feature{
+	top: 574px !important;
+	left: 699px;
+	position: relative;
+	height: 37px;
+	width: 37px;
+	border: 2px solid #2b13bb !important;
+	}
+  #saveDataButton {
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  position: fixed;
+  color: black;
+  padding: 0px 5px;
+  display: none;
+  top: 690px;
+  font-size: 19px;
+  height: 37px;
+  width: 37px;
+  left: 880px;
+}
+#deleteFeatureButton {
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 3px 7px;
+  display: none;
+  position: fixed;
+  top: 690px;
+  font-size: 15px;
+  height: 37px;
+  width: 37px;
+  left: 925px;
+}
+.leaflet-draw-draw-polygon {
+left: 617px !important;
+position:absolute !important;
+top: 367px !important;
+height: 37px !important;
+width: 37px !important;
+border-bottom: 2px solid #2B13BB !important;
+border-top: 2px solid #2B13BB !important;
+border-left: 2px solid #2B13BB !important;
+border-right: 2px solid #2B13BB !important;
+border-radius: 5px 5px 5px 5px !important;
+}
+.leaflet-draw-draw-polyline {
+  top: 367px !important;
+  position: absolute !important;
+  left: 659px !important;
+  border: 2px solid #2b13bb !important;
+  border-bottom: 2px solid darkblue;
+  height: 37px !important;
+  width: 37px !important;
+  border-radius: 5px 5px 5px 5px !important;
+}
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 486px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  display: none;
+  left: 570px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+
+
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px !important;
+  width: 37px !important;
+  display: none;
+  position: fixed;
+  top: 690px;
+  left: 838px;
+  padding: 5px;
+  background: white;
+  border-bottom: 2px solid #2b13bb;
+}
+.custom-button {
+  width: auto;
+  padding: px 5px;
+  background-color: #fff;
+  /* color: darkblue; */
+  font-weight: bold;
+  font-size: 10px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px !important;
+  cursor: pointer;
+  /* position: absolute; */
+  top: 414px !important;
+  left: 741px !important;
+  height: 37px !important;
+  width: 37px !important;
+  transition: background-color  0.1s;
+}
+#save-button {
+  /* border: 2px solid rgb(187, 187, 187); */
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 7px;
+  display: none;
+  position: absolute;
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  top: 480px;
+  height: 37px;
+  width: 37px;
+  left: 574px;
+  font-size: 15px;
+  border-bottom: 2px solid #2b13bb;
+}
+.delete-button {
+  border: 2px solid #2b13bb;
+  padding: 6px 7.3px;
+  font-size: 14px;
+  border-radius: 5px 5px 5px 5px;
+  display: block;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  left: 488px;
+  position: absolute;
+  top: 425px !important;
+  height: 37px;
+  width: 37px;
+  display: none;
+  border-top: 2px solid #2b13bb !important;
+  border-bottom: 2px solid #2b13bb !important;
+  border-left: 2px solid #2b13bb !important;
+  border-right: 2px solid #2b13bb !important;
+}
+
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 438px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  display: none;
+  left:530px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+
 
    
 
@@ -41,6 +198,7 @@
     border: 2px solid darkblue;
     
 }
+
   </style>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
