--- a/building.html
+++ b/building.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +7,7 @@
 	<link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
 	<link rel="stylesheet" href="css/style.css" />
 	<style>
+		
 .draw_feature{
 	top: 573px !important;
 	left: 705px;
@@ -153,6 +153,13 @@ border-radius: 5px 5px 5px 5px !important;
   display: none;
   left: 570px !important;
   border-bottom: 2px solid #2b13bb !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    background-position: -28px 1px !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+    background-position: -270px 1px !important;
+  
 }
   </style>
 
