--- a/drainage.html
+++ b/drainage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style>
-  .custom-button {
+ .custom-button {
   width: auto;
   padding: px 5px;
   background-color: #fff;
@@ -26,7 +26,7 @@
   width: 37px !important;
   transition: background-color  0.1s;
     }
-  .leaflet-draw-draw-polyline {
+.leaflet-draw-draw-polyline {
   top: 435px;
   position: absolute;
   left: 650px;
@@ -130,7 +130,12 @@
   background: white;
   border-bottom: 2px solid #2b13bb;
 }
-
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+    background-position: -269px 1px !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+    background-position: 1px 2px !important;
+}
     
 
   </style>
