--- a/electric-work.html
+++ b/electric-work.html
@@ -30,7 +30,12 @@
     .leaflet-draw-toolbar .leaflet-bar{
       display: none !important;
     }
-    
+    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circle {
+    background-position: -89px 1px  !important;
+}
+.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+    background-position: 2px 3px !important;
+}
    
 
     .leaflet-container .leaflet-control-attribution {
