--- a/road.html
+++ b/road.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,8 +21,26 @@
   font-size: 19px;
   height: 37px;
   width: 37px;
-  left: 880px;
+  left: 865px;
 }
+.delete-button {
+  border: 2px solid #2b13bb;
+  padding: 6px 7.3px;
+  font-size: 14px;
+  border-radius: 5px 5px 5px 5px;
+  display: block;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  left: 513px;
+  position: absolute;
+  top: 487px !important;
+  height: 37px;
+  width: 37px;
+  display: none ;
+  border-top: 2px solid #2b13bb;
+}
+
 #deleteFeatureButton {
   border: 2px solid #2b13bb;
   border-top: 2px solid #2b13bb;
@@ -37,7 +54,7 @@
   font-size: 15px;
   height: 37px;
   width: 37px;
-  left: 925px;
+  left: 908px;
 }
 
 
@@ -50,10 +67,39 @@
   display: none;
   position: fixed;
   top: 683px;
-  left: 838px;
+  left: 822px;
   padding: 5px;
   background: white;
   border-bottom: 2px solid #2b13bb;
+}
+.leaflet-draw-draw-polyline {
+  top: 430px !important;
+  position: absolute;
+  left: 643px;
+  border: 2px solid #2b13bb !important;
+  border-bottom: 2px solid darkblue;
+  height: 37px !important;
+  width: 37px !important;
+  border-radius: 5px 5px 5px 5px !important;
+}
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 501px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  /* display: none; */
+  left: 555px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+.leaflet-draw-toolbar a {
+    background-image: url(images/spritesheet.png);
+    background-image: linear-gradient(transparent, transparent), url(images/spritesheet.svg);
+    background-repeat: no-repeat;
+    background-size: 360px 36px !important;
+    background-clip: padding-box;
 }
   </style>
   
@@ -491,7 +537,7 @@ function toggleSelectLayerButton(show) {
 
       // Change the button's onclick function to stop the task
       button.onclick = function () {
-        button.innerHTML = '<img src="png/003-selection.png" alt="" style="width:20px;  height:20px; " title="SELECT-FEATURE">';
+        button.innerHTML = '<img src="png/003-selection.png" alt="" style="width:20px;  height:20px padding:5px; " title="SELECT-FEATURE">';
         // Remove the click event listener from the map
         var drawFeatureButton = document.querySelector('.draw_feature');
         if (drawFeatureButton) {
