--- a/electric-work.html
+++ b/electric-work.html
@@ -296,7 +296,7 @@ function toggleSelectLayerButton(show) {
 
 
             $('#table-container').show();
-    console.log(formDataFromStorage);
+
     let contentData = '<tr>';
     for (const property in formDataFromStorage) {
       contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
@@ -418,11 +418,10 @@ function toggleSelectLayerButton(show) {
                 },
               });
 
-              console.log(selectCoordinatesData);
-
-              area = turf.area(selectCoordinatesData[0]);
+             
+           area = turf.area(selectCoordinatesData[0]);
           var formData = new FormData();
-          formData.append('proj_id', '20698');
+          formData.append('proj_id', worksAaApprovalId);
           formData.append('latitude', selectCoordinatesData[0].geometry.coordinates[0][1]);
           formData.append('longitude', selectCoordinatesData[0].geometry.coordinates[0][0]);
           formData.append('polygon_area', 0);
@@ -440,7 +439,6 @@ function toggleSelectLayerButton(show) {
               processData: false,
               contentType: false,
               success: function (response) {
-                  console.log(response);
                 window.location.href = response.data.redirect_Url;
               },
               error: function (xhr, status, error) {
