--- a/building.html
+++ b/building.html
@@ -18,7 +18,7 @@
 	}
  .custom-button {
   width: auto;
-  padding: px 5px;
+  padding: 1px 5px;
   background-color: #fff;
   /* color: darkblue; */
   font-weight: bold;
@@ -27,7 +27,7 @@
   border-radius: 5px !important;
   cursor: pointer;
   /* position: absolute; */
-  top: 460px !important;
+ 
   left: 750px !important;
   height: 37px !important;
   width: 37px !important;
@@ -82,7 +82,7 @@
 }
 .leaflet-draw-draw-circlemarker {
   position: absolute;
-  top: 413px;
+  top: 460px !important;
   left: 660px !important;
   border-bottom: 2px solid #2B13BB !important;
   border-top: 2px solid #2B13BB !important;
@@ -96,7 +96,7 @@
 .leaflet-draw-draw-polygon {
 left: 617px !important;
 position: absolute;
-top: 413px !important;
+top: 460px !important;
 height: 37px !important;
 width: 37px !important;
 border-bottom: 2px solid #2B13BB !important;
