--- a/electric-work.html
+++ b/electric-work.html
@@ -90,7 +90,7 @@
       .leaflet-draw-draw-polygon {
         left: 575px !important;
         position: absolute !important;
-        top: 367px !important;
+        top: 414px !important;
         height: 37px !important;
         width: 37px !important;
         border-bottom: 2px solid #2b13bb !important;
@@ -100,7 +100,7 @@
         border-radius: 5px 5px 5px 5px !important;
       }
       .leaflet-draw-draw-polyline {
-        top: 367px !important;
+        top: 414px !important;
         position: absolute !important;
         left: 659px !important;
         border: 2px solid #2b13bb !important;
@@ -109,25 +109,14 @@
         width: 37px !important;
         border-radius: 5px 5px 5px 5px !important;
       }
-      /* .leaflet-control-edit-interior {
-        font-size: 15px;
-        position: absolute !important;
-        height: 37px !important;
-        width: 37px !important;
-        top: 486px !important;
-        border: 2px solid #2b13bb;
-        border-radius: 5px 5px 5px 5px !important;
-        display: none;
-        left: 570px !important;
-        border-bottom: 2px solid #2b13bb !important;
-      } */
+    
 
       #editFeatureButton {
         border: 2px solid #2b13bb;
         border-radius: 5px 5px 5px 5px;
         height: 37px !important;
         width: 37px !important;
-        /* display: none; */
+        display: none !important; 
         position: fixed;
         top: 690px;
         left: 838px;
@@ -146,7 +135,7 @@
         border-radius: 5px !important;
         cursor: pointer;
         /* position: absolute; */
-        top: 414px !important;
+        top: 680px !important;
         left: 741px !important;
         height: 37px !important;
         width: 37px !important;
@@ -205,7 +194,7 @@
       }
       .leaflet-draw-draw-circle {
         position: absolute;
-        top: 367px;
+        top: 414px;
         left: 618px;
         border-bottom: 2px solid #2b13bb !important;
         border-top: 2px solid #2b13bb !important;
