--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <!-- <link rel="stylesheet" href="C_form.css" /> -->
 
     <!-- bootstrap -->
@@ -924,6 +924,7 @@ function toggleSelectLayerButton(show) {
 
       // Customize the zoom control position
       map.zoomControl.setPosition("bottomright");
+      
     </script>
 
 
