--- a/dashboard2.html
+++ b/dashboard2.html
@@ -370,8 +370,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet/0.0.1-beta.5/esri-leaflet.js"></script>
-  <script
-    src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.js"></script>
+  <script src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://unpkg.com/@turf/turf@6.3.0/turf.min.js"></script>
   <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
@@ -379,8 +378,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <script src="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.js"></script>
   <script src="libs/feat.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
@@ -399,20 +397,12 @@
       document.getElementById("mySidenav").style.top = "150px";
       document.getElementById("mySidenav").style.left = "12px";
       document.getElementById("mySidenav").style.scrollbarWidth = "thin";
-
       document.getElementById("content").style.marginLeft = "9.5%";
-
-
       document.getElementById("content").style.zIndex = "0";
-
-
-
     }
 
     function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
-
-
       document.getElementById("content").style.marginLeft = "9.5%";
     }
 
