--- a/electric-work.html
+++ b/electric-work.html
@@ -200,8 +200,7 @@ border-radius: 5px 5px 5px 5px !important;
   border-left: 2px solid #2b13bb !important;
   border-right: 2px solid #2b13bb !important;
 }
-
-.leaflet-control-edit-interior {
+/* .leaflet-control-edit-interior {
   font-size: 15px;
   position: absolute !important;
   height: 37px !important;
@@ -212,7 +211,7 @@ border-radius: 5px 5px 5px 5px !important;
   display: none;
   left:530px !important;
   border-bottom: 2px solid #2b13bb !important;
-}
+} */
 .leaflet-draw-draw-circle {
   position: absolute;
   top: 367px;
