--- a/water-suppy.html
+++ b/water-suppy.html
@@ -9,14 +9,8 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- <link rel="stylesheet" href="C_form.css" /> -->
 <style>
-    #map {
-      top: 0px;
-      left: 0px;
-      height: 99vh;
-      width: 100%;
-      z-index: 1;
-  }
-  leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+
+  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
     background-position: 2px 2px !important;
 } 
 .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
@@ -166,7 +160,7 @@ border-radius: 5px 5px 5px 5px !important;
   border-right: 2px solid #2b13bb !important;
 }
 
-.leaflet-control-edit-interior {
+/* .leaflet-control-edit-interior {
   font-size: 15px;
   position: absolute !important;
   height: 37px !important;
@@ -177,7 +171,7 @@ border-radius: 5px 5px 5px 5px !important;
   display: none;
   left:530px !important;
   border-bottom: 2px solid #2b13bb !important;
-}
+} */
 
 
   
