--- a/dashboard.html
+++ b/dashboard.html
@@ -13,13 +13,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+  <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
   <link rel="stylesheet" href="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.css">
 
   <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css">
-  <link rel="stylesheet" type="text/css"
-    href="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.css" />
 
   <link rel="stylesheet" href="css/C_form.css"/>
 
@@ -520,109 +518,6 @@
 
 
 
-
-
-    //    //Pop-Up show
-    // const layerDetails2 = {
-    //   "pmc:Exist_Road": ["rid", "surveystatus", "roadclass",  "swd_condition"],
-    //   "pmc:Reservations": ["OBJECTID_1", "Broad_LU", "Decision",  "Area"],
-    //   "pmc:storm_water": ["OBJECTID", "basin_name", "category",  "descriptio", "i_length"],
-    //   "pmc:Sewage1": ["OBJECTID", "STP_Name", "STP_Area",  "Category", "Unique_ID"],
-    //   "pmc:Sewage_Treatment_Plant": ["OBJECTID", "STP_Name", "STP_Area",  "Category", "Unique_ID"],
-    //   "pmc:Pumping_station": ["OBJECTID", "Unique_ID", "SPS_Name"],
-    //   "pmc:Data": ["works_aa_a", "name_of_wo", "Department",  "work_type","stage","scope_of_w","Budget_Code","Agency", "Project_Office", "zone_id", "zone", "ward", "tender_amo", "je_name", "contact_no"],
-    // };
-
-    // map.on("contextmenu", async (e) => {
-    //   let bbox = map.getBounds().toBBoxString();
-    //   let size = map.getSize();
-
-    //   for (let layer in layerDetails2) {
-    //       let selectedKeys = layerDetails2[layer];
-    //       let urrr = `https://iwmsgis.pmc.gov.in//geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(e.containerPoint.x)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y}&BBOX=${bbox}`;
-
-    //       try {
-    //           let response = await fetch(urrr);
-    //           let html = await response.json();
-
-    //           var htmldata = html.features[0].properties;
-    //           let txtk1 = "";
-    //           for (let key of selectedKeys) {
-    //               if (htmldata.hasOwnProperty(key)) {
-    //                   let value = htmldata[key];
-    //                   txtk1 += "<tr><td>" + key + "</td><td>" + value + "</td></tr>";
-    //               }
-    //           }
-
-    //           let detaildata1 = "<div style='max-height: 350px; max-height: 250px;'><table  style='width:70%;' class='popup-table' >" + txtk1 + "</td></tr><tr><td>Co-Ordinates</td><td>" + e.latlng + "</td></tr></table></div>";
-
-    //           L.popup().setLatLng(e.latlng).setContent(detaildata1).openOn(map);
-    //       } catch (error) {
-    //           console.error("Error fetching data:", error);
-    //       }
-    //   }
-    // });
-
-
-
-    // -------------------added 11-2-24------------------------
-    // function fitbou(filter) {
-    //   layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
-    //   layers.forEach(function (layerName) {
-    //     var urlm =
-    //       "https://iwmsgis.pmc.gov.in/geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
-    //       layerName +
-    //       "&CQL_FILTER=" +
-    //       filter +
-    //       "&outputFormat=application/json";
-    //     // console.log(urlm, "fittobound url")
-    //     $.getJSON(urlm, function (data) {
-    //       console.log(data)
-    //       geojson = L.geoJson(data, {});
-    //       map.fitBounds(geojson.getBounds());
-    //     });
-    //   });
-    // }
-
-//     function fitbous(filter) {
-//   var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
-//   var bounds = null;
- 
-//   var processLayer = function (layerName, callback) {
-//     var urlm =
-//       "https://pmc.geopulsea.com//geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
-//       layerName +
-//       "&CQL_FILTER=" +
-//       filter +
-//       "&outputFormat=application/json";
-   
-//     $.getJSON(urlm, function (data) {
-//       var geojson = L.geoJson(data);
-//       var layerBounds = geojson.getBounds();
-//       if (bounds) {
-//         bounds.extend(layerBounds);
-//       } else {
-//         bounds = layerBounds;
-//       }
-//       callback();
-//     });
-//   };
- 
-//   var layersProcessed = 0;
-//   layers.forEach(function (layerName) {
-//     processLayer(layerName, function () {
-//       layersProcessed++;
-//       if (layersProcessed === layers.length) {
-//         // Apply the combined bounds to the map after all layers are processed
-//         if (bounds) {
-//           console.log(bounds,"rrrrrrrrrrrrrrrrrrrr")
-//           map.fitBounds(bounds);
-//         }
-//       }
-//     });
-//   });
-// }
-
 function fitbous(filter) {
   var layers = ["pmc:IWMS_point", "pmc:IWMS_line","pmc:IWMS_polygon"];
   var bounds = L.latLngBounds(); // Initialize an empty LatLngBounds object
@@ -964,22 +859,6 @@ function fitbous(filter) {
     // newly added 20/04/2022
 
 
-//             // Trigger the opening of the Select2 dropdown when the select button is clicked
-//             var selectButton = $('#headingOffice button');
-//             selectButton.on('click', function() {
-//                 //select.select2('open');
-//                 // Find the search input within the Select2 dropdown
-// var searchInput = $('.select2-search__field');
-
-// // Handle the click event on the search input
-// searchInput.on('click', function(event) {
-//     // Trigger the opening of the Select2 dropdown
-//     select.select2('open');
-//     // Prevent the default behavior (e.g., focusing the search input) 
-//     // so that the dropdown remains open after clicking on the search input
-//     event.preventDefault();
-//     event.stopPropagation();
-// });
 
 
 
